--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="profile">
             <div class="notch"></div>
             <div class="profile-info">
-              <i style="color:#FFF;" class='fas'>&#xf104;</i>
+              <i style="color:#FFF;" class='fas'>&#xf104</i>
               <div class="avatar"> <img src="images/avatar.jpg" alt="profile picture"></div>
               <div class="user-info">
                 <h1 class="username">Samuel Green</h1>
@@ -56,9 +56,10 @@
               <p class="gradient-txt">30 minute walk <span class="cost bold-txt">$29</span></p>
               <p class="gradient-txt">1 hour walk<span class="cost bold-txt">$49</span></p>
             </div>
-
-            <input type="text" placeholder="Type a message...">
-
+            <div class="msg-type-send">
+              <input type="text" placeholder="Type a message...">
+              <button> <i style="color:#FFF;" class='fas'>&#xf105</i></button>
+            </div>
           </div>
         </div>
       </div>
