--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="profile">
             <div class="notch"></div>
             <div class="profile-info">
-              <i style="color:#FFF;" class='fas'>&#xf104</i>
+              <i style="color:#FFF;" class='fas'>&#xf104; </i>
               <div class="avatar"> <img src="images/avatar.jpg" alt="profile picture"></div>
               <div class="user-info">
                 <h1 class="username">Samuel Green</h1>
@@ -58,7 +58,7 @@
             </div>
             <div class="msg-type-send">
               <input type="text" placeholder="Type a message...">
-              <button> <i style="color:#FFF;" class='fas'>&#xf105</i></button>
+              <button> <i style="color:#FFF;" class='fas'>&#xf105; </i></button>
             </div>
           </div>
         </div>
