--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
           </div>
           <div class="messages">
             <div class="msg-from-sender">
-              <p>That sounds great. I’d be happy with that.</p>
-              <p>Could you send over some pictures of your dog, please?</p>
+              <p class="msg-left1">That sounds great. I’d be happy with that.</p>
+              <p class="msg-left2">Could you send over some pictures of your dog, please?</p>
             </div>
             <div class=" msg-from-receiver">
-              <div class="dog-images">
+              <div class="dog-images msg-right1">
                 <img src="images/dog-image-1.jpg" alt="">
                 <img src="images/dog-image-2.jpg" alt="">
                 <img src="images/dog-image-3.jpg" alt="">
               </div>
 
-              <p>Here are a few pictures. She’s a happy girl!</p>
-              <p>Can you make it?</p>
+              <p class="msg-right2">Here are a few pictures. She’s a happy girl!</p>
+              <p class="msg-right3">Can you make it?</p>
             </div>
             <div class="msg-from-sender chat-bottom-left">
-              <p>She looks so happy! The time we discussed works. How long shall I take her out for?</p>
-              <p class="gradient-txt">30 minute walk <span class="cost bold-txt">$29</span></p>
-              <p class="gradient-txt">1 hour walk<span class="cost bold-txt">$49</span></p>
+              <p class="msg-left3">She looks so happy! The time we discussed works. How long shall I take her out for?</p>
+              <p class="gradient-txt msg-left4">30 minute walk <span class="cost bold-txt">$29</span></p>
+              <p class="gradient-txt msg-left5">1 hour walk<span class="cost bold-txt">$49</span></p>
             </div>
             <div class="msg-type-send">
               <input type="text" placeholder="Type a message...">
